crates/etl-api/tests/snapshots/main__pipelines__all_pipelines_can_be_read-2.snap
---
source: crates/etl-api/tests/pipelines.rs
expression: pipeline.config
---
FullApiPipelineConfig {
    publication_name: "updated_publication",
    batch: Some(
        BatchConfig {
            max_size: Some(
                2000,
            ),
            max_fill_ms: 10,
        },
    ),
    table_error_retry_delay_ms: Some(
        20000,
    ),
    table_error_retry_max_attempts: Some(
        10,
    ),
    max_table_sync_workers: Some(
        4,
    ),
    table_sync_copy: Some(
        IncludeAllTables,
    ),
    log_level: Some(
        Info,
    ),
}
